Bug 487079 - Extremely long comment in entry freezes or doesn't display
Summary: Extremely long comment in entry freezes or doesn't display
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.5.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-16 01:18 UTC by Robby Stephenson
Modified: 2024-05-16 01:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.0
Sentry Crash Report:


Attachments
Example file with long comment (7.41 KB, application/zip)
2024-05-16 01:18 UTC, Robby Stephenson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2024-05-16 01:18:15 UTC
Created attachment 169520 [details]
Example file with long comment

An entry with a super long comment doesn't display or freezes the app. Source was a SoundConverter importer, but that shouldn't matter.
Comment 1 Robby Stephenson 2024-05-16 01:37:26 UTC
Git commit 03c3f37c2e96fdfbfa7b4a0f6b3b21a6931a4b69 by Robby Stephenson.
Committed on 16/05/2024 at 01:37.
Pushed by rstephenson into branch 'master'.

Fix bug with showing long entries

Avoid QWebEngineView limit of 2MB for html content by using
temporary file.
Related: bug 461391
FIXED-IN: 4.0

M  +4    -0    ChangeLog
M  +24   -5    src/entryview.cpp

https://invent.kde.org/office/tellico/-/commit/03c3f37c2e96fdfbfa7b4a0f6b3b21a6931a4b69
Comment 2 Robby Stephenson 2024-05-16 01:41:43 UTC
Git commit e87e20053644ca51c6ae2b2938203d80952e123c by Robby Stephenson.
Committed on 16/05/2024 at 01:41.
Pushed by rstephenson into branch '3.5'.

Fix bug with showing long entries

Avoid QWebEngineView limit of 2MB for html content by using
temporary file.
Related: bug 461391
FIXED-IN: 4.0

M  +4    -0    ChangeLog
M  +24   -5    src/entryview.cpp

https://invent.kde.org/office/tellico/-/commit/e87e20053644ca51c6ae2b2938203d80952e123c