Fix bug with showing long entries

Avoid QWebEngineView limit of 2MB for html content by using
temporary file.

BUG: 487079
FIXED-IN: 4.0
CCBUG: 461391